added show error function

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           />
           <small>Error Message</small>
         </div>
-        <button>Submit</button>
+        <button type="submit">Submit</button>
       </form>
     </div>
     <script src="./app.js"></script>
